<?xml version="1.0" encoding="utf-8"?>
<resources>

<!--     <string name="app_name">团委通讯录</string> -->
    <string name="app_name">Demo</string>
    <string name="action_settings">设置</string>

    <!-- 登录Activity -->
    <string name="loginUserNameLabel">手机号码</string>
    <string name="loginPasswordLabel">密码</string>
    <string name="hint_pwd">请输入用户密码</string>
    <string name="hint_user">请输入手机号</string>
    <string name="loginRememberMe">&#160;&#160;记住我</string>
    <string name="autoLogin">&#160;&#160;自动登录</string>
    <string name="loginVisiablePwd">&#160;&#160;密码可见</string>
    <string name="registerLabel">更新数据</string>
    <string name="loginLabel">登&#160;&#160;&#160;&#160;录</string>
    
	<string name="hint_wrong_mobile">输入的手机号码错误！</string>
	<string name="hint_no_user">登录失败，指定的用户不存在！</string>
	
	<!-- 注册Activity -->
	<string name="mobileLabel">手机号</string>
	<string name="nameLabel">用户名称</string>
	<string name="phonelLabel">座机号码</string>
	<string name="passwordLabel">密码</string>
	<string name="departmentLabel">所属部门</string>
	<string name="positionLabel">职位</string>
	<string name="organizationLabel">所属组织</string>
	
	<string name="hint_phone">请输入手机号</string>
	<string name="hint_name">请输入用户名称</string>
	<string name="hint_email">请输入座机号码</string>
	<string name="hint_password">请输入密码</string>
	<string name="hint_fail">注册失败！</string>
	<string name="hint_success">注册成功，请等待管理员批准！</string>
    <string name="hint_fail_modify">修改本地用户信息失败！</string>
	<string name="hint_success_modify">修改用户信息成功！</string>
	<string name="hint_staff_exist">所注册的手机号码已经存在</string>
	<string name="hint_upload_date">请稍后，系统正在上传数据&#8230;&#8230;&#8230;</string>
	
	<string name="confirmLabel">注册</string>
    <string name="cancelLabel">取消</string>
	
	<!-- 主Activity -->
    <string name="text_reflash">刷新</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新&#8230;</string>
	<string name="pull_to_refresh_release_label">松开可以刷新&#8230;</string>
	<string name="pull_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="loading_data">正在获取数据&#8230;</string> 
    
    <string name="call_title">打电话</string>
    <string name="sms_title">发短信</string>
    
    <string name="invaild_phone">所选用户没有有效的电话号码</string>
    
    <!-- 设置Activity -->
    <string name="forgetMe">&#160;&#160;忘记我</string>
    <string name="cancel_autoLogin">&#160;&#160;取消自动登录</string>
    <string name="cancel_btn">取消</string>
    <string name="ok_btn">确定</string>
    
    <!-- 短信Activity -->
    <string name="ms_title">短信内容</string>
    <string name="to_title">发送给:</string>
    <string name="hint_ms">请输入短信内容</string>
    <string name="send_Label">发送</string>
    <string name="send_success">短信发送成功</string>
    <string name="send_fail">短信发送失败</string>
    <string name="sms_feedback">收信人已经成功接收</string>
    
    <!-- 详细Activity -->
    <string name="phone_title">座机号：</string>
    <string name="mobile_title">手机号：</string>
    <string name="name_title">用户名：</string>
    <string name="position_title">&#160;&#160;&#160;职务：</string>
    <string name="address_title">&#160;&#160;&#160;&#160;地址：</string>
    <string name="no_vaild_phone">没有有效的手机号码或座机号码</string>
    
    <!-- 下载数据 -->
    <string name="download_title">下载数据</string>
    <string name="downloading">系统正在努力下载数据&#8230;&#8230;&#8230;</string>
    <string name="download_fail">系统下载数据失败</string>
    <string name="download_net_error">网络存在问题，下载数据失败</string>
    <string name="download_no_file">所需文件在服务上不存在，请与管理员联系</string>
    <string name="download_success">系统下载数据完成！</string>
    <string name="no_need_update">不需要更新，已经是最新数据</string>
    
</resources>