<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <!-- title -->
    <LinearLayout
        android:id="@+id/index_header"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/headtitlebk"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/imgmyindex_head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- 登录输入框 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/loginUserNameLabel"
        android:textColor="@color/color_content_black"
        android:textSize="16sp" >
    </TextView>

    <EditText
        android:id="@+id/loginUserNameEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/hint_user"
        android:inputType="number"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/loginPasswordLabel"
        android:textColor="@color/color_content_black"
        android:textSize="16sp" >
    </TextView>

    <EditText
        android:id="@+id/loginPasswordEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:singleLine="false" >
    </EditText>

    <CheckBox
        android:id="@+id/visiblePwdCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:background="@drawable/checkbox_background"
        android:button="@drawable/checkbox"
        android:gravity="center_vertical|start|left"
        android:text="@string/loginVisiablePwd"
        android:textColor="@color/dimgrey"
        android:textSize="13sp" >
    </CheckBox>

    <!-- 登录和注册 按钮 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/regSubmit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_regist"
            android:gravity="center"
            android:text="@string/registerLabel"
            android:textColor="@color/white"
            android:textSize="18sp" >
        </Button>

        <Button
            android:id="@+id/loginSubmit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:text="@string/loginLabel"
            android:textColor="@color/white"
            android:textSize="18sp" >
        </Button>
    </LinearLayout>

    <!-- 两个checkbox -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/loginRememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:background="@drawable/checkbox_background"
            android:button="@drawable/checkbox"
            android:gravity="center_vertical|start|left"
            android:text="@string/loginRememberMe"
            android:textColor="@color/dimgrey"
            android:textSize="13sp" >
        </CheckBox>

        <CheckBox
            android:id="@+id/autoLoginCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:background="@drawable/checkbox_background"
            android:button="@drawable/checkbox"
            android:text="@string/autoLogin"
            android:textColor="@color/dimgrey"
            android:textSize="13sp" >
        </CheckBox>
    </LinearLayout>

</LinearLayout>