<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <!-- title -->
    <LinearLayout
        android:id="@+id/index_header"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/headtitlebk"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/back" />
                
        <TextView
            android:id="@+id/imgmyindex_head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/to_title"
        android:textColor="@color/color_content_black"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/to_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp" 
        android:textColor="@color/black"
        android:background="@drawable/sqare"
        android:scrollbars="vertical"
		android:maxLines="8"
        android:singleLine="false" />
        
    <!-- 输入框 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/ms_title"
        android:textColor="@color/color_content_black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ms_editview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_ms"
        android:gravity="top" />


    <!-- 登录和注册 按钮 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:text="@string/send_Label"
            android:textColor="@color/white"
            android:textSize="18sp" />
        
    </LinearLayout>

</LinearLayout>